# bots

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  SPEC.md  SUMMARY.md  pyproject.toml
.bots/botmaker/: config.json  system_prompt.md
.bots/joe/: config.json  system_prompt.md
.bots/joe/sessions/2025-04-23T09-42-32/: conversation.json  log.json  session.json
.bots/test-with-desc/: config.json  system_prompt.md
.bots/testbot/: config.json  system_prompt.md
bot/: async_core.py  cli.py  command.py  config.py  core.py  models.py  session.py  utils.py
bot/llm/: __init__.py  direct_openai.py  integration.py  pydantic_bot.py  pydantic_tools.py  schemas.py
bot/providers/: __init__.py  base.py  openai_provider.py  provider_factory.py
bots/: __init__.py  async_core.py  bot.py  cli.py  config.py  core.py  default_system_prompt.md  models.py  permissions.py  session.py  utils.py
bots/command/: executor.py  permissions.py
bots/llm/: command_executor.py  pydantic_bot.py  pydantic_tools.py  schemas.py
bots/providers/: base.py  openai_provider.py  provider_factory.py
dev_docs/: DEVGUIDE.md  PLAN.md  SPEC.md  TO_DO.md  example_pydantic_ai_code.md
docs/: PERMISSIONS.md  command-normalization-design.md
scripts/: check_pydantic_ai.py  diagnose_system.py  direct_openai_test.py  run_bot_simple.py  test_bot_response.py  test_command_tool.py  test_default_permissions.py  test_full_system.py  test_pydantic_ai_messages.py  test_pydantic_ai_output.py  verify_openai_key.py
tests/: test_command.py  test_command_permissions.py  test_config.py  test_core.py  test_known_bots.py  test_session.py  test_startup_script.py  test_utils.py
