[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.1.0"
description = "Modular CLI AI Assistants"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "openai>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.3",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["bot"]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "build>=1.0.0"]

[project.scripts]
bot = "bot.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--disable-warnings",
    "-p no:warnings",
    "-p no:cacheprovider",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
